examples/core/errors/type_errors/01_param_type_mismatch.output.txt

error[E0101]: Type mismatch
  ┌─ input:1:1
1 │ 42 : $Type
    ^^ ----
2 │ 
  = hint: Check that types are compatible

